# openmesh-manage

./: .gitignore  CMakeLists.txt  README.md  compile.sh  dev_setup.sh  run.sh  setup.sh
3rd/OpenMesh-11.0.0/: CMakeLists.txt
include/: boundary_searcher.h  index_boundary.h  index_edge.h  index_point.h
src/: boundary_searcher.cpp  index_boundary.cpp  index_edge.cpp  index_point.cpp  main.cpp
